<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObdActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/configure_background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_message_table"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/fuel_next" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/main_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fuel_next_msg"
                        android:textColor="@android:color/white"
                        android:textSize="35dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/sub_msg1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="80%"
                            android:textColor="@android:color/white"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/sub_msg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/fuel_level"
                            android:textColor="@android:color/white"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gasstation" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_table"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:layout_weight="3"
                        android:background="@color/tile2" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:orientation="vertical" >

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/fuel_consumed_caption"
                                    android:textColor="@android:color/white"
                                    android:textSize="20dp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal" >

                                    <TextView
                                        android:id="@+id/fuel_consumed"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="left"
                                        android:text="@string/fuel_consumed"
                                        android:textColor="@android:color/white"
                                        android:textSize="60dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/fuel_consumption_measurement"
                                        android:textColor="@android:color/white" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:layout_weight="3"
                        android:background="@color/tile5" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/speed_caption"
                                android:textColor="@android:color/white"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/speed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center|center_horizontal"
                                android:text="@string/speed"
                                android:textColor="@android:color/white"
                                android:textSize="60dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/speed_measurement"
                                android:textColor="@android:color/white" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="2"
                            android:background="@color/tile4"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="3dp"
                                android:orientation="vertical" >

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/drive_cost_caption"
                                    android:textColor="@android:color/white"
                                    android:textSize="20dp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal" >

                                    <TextView
                                        android:id="@+id/drive_cost"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="bottom"
                                        android:gravity="left"
                                        android:text="@string/drive_cost"
                                        android:textColor="@android:color/white"
                                        android:textSize="55dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="bottom"
                                        android:gravity="left"
                                        android:text="@string/drive_cost_measurement"
                                        android:textColor="@android:color/white"
                                        android:textSize="25dp" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:layout_weight="3"
                        android:background="@color/tile1" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:orientation="vertical" >

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/latitude_caption"
                                    android:textColor="@android:color/white"
                                    android:textSize="15dp" />

                                <TextView
                                    android:id="@+id/latitude"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/latitude"
                                    android:textColor="@android:color/white"
                                    android:textSize="20dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:layout_weight="3"
                        android:background="@color/tile1" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3dp"
                                android:orientation="vertical" >

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/longitude_caption"
                                    android:textColor="@android:color/white"
                                    android:textSize="15dp" />

                                <TextView
                                    android:id="@+id/longitude"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:text="@string/longitude"
                                    android:textColor="@android:color/white"
                                    android:textSize="20dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/tile4"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/engine_speed_caption"
                                android:textColor="@android:color/white"
                                android:textSize="14dp" />

                            <TextView
                                android:id="@+id/engine_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:gravity="center"
                                android:text="@string/engine_speed"
                                android:textColor="@android:color/white"
                                android:textSize="30dp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:gravity="right"
                                android:text="@string/engine_speed_measurement"
                                android:textColor="@android:color/white"
                                android:textSize="15dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>